[package]
name = "wtd"
description = "Wiki Table Downloader"
version = "0.1.0"
authors = ["Adam Melnyk <adam@adammelnyk.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["macros", "time"]}
reqwest = "0.10.4"
scraper = "0.12.0"
sqlite = "0.25.0"
regex = "1.3.9"